[build-system]
requires = ["setuptools>=46.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "ProtoServer"
version = "1.1.0"
authors = ["Muhammed Abdullah Shaikh <muhammed.shaikh@accoladeelectronics.com>"]
description = "TMCVP Protobuf Encoded Communication Testing Server"
readme = "README.md"
license = "BSD-3-Clause License"
keywords = ["server", "flask", "mqtt", "protobuf","python"]
packages = [
    { include = "protoserver" },
]
include = [ "protoserver/static", "protoserver/templates", "protoserver/TMCVP630/*.py"]

[tool.poetry.dependencies]
python = "^3.9" 
Flask = "3.0.2"
Flask-MQTT = "1.1.1"
Flask-Rich= "0.4.1"
Flask-SocketIO = "5.3.6"
Flask-WTF = "1.2.1"
Jinja2 = "3.1.3"
paho-mqtt = "1.6.1"
protobuf = "3.20.0"
tabulate = "0.9.0"
WTForms = "3.1.2"

[tool.poetry.scripts]
commander = "protoserver.commander:main"
tmcvp-server-flask = "protoserver.app:main"
tmcvp-server = "protoserver.app:TmcvpMQTTProtobufServer"